--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,3 +12,7 @@ pytest-asyncio==0.23.2
 azure-storage-blob
 chardet
 azure-keyvault-secrets
+opentelemetry-api 
+opentelemetry-sdk 
+opentelemetry-exporter-otlp 
+opentelemetry-instrumentation-logging
