--- a/.github/workflows/app-cd-new-test .yml
+++ b/.github/workflows/app-cd-new-test .yml
@@ -56,12 +56,12 @@ jobs:
 
       - name: Set Web App Configuration
         run: |
-          az webapp config appsettings set -g ${{ vars.RESOURCE_GROUP_TEST }} -n ${{ vars.WEBAPP_NAME_TEST }} --settings WEBSITE_WEBDEPLOY_USE_SCM=false SCM_COMMAND_IDLE_TIMEOUT=3600 WEBSITES_CONTAINER_START_TIME_LIMIT=3600
+          az webapp config appsettings set -g ${{ vars.RESOURCE_GROUP_TEST }} -n ${{ vars.WEBAPP_NAME_TEST }} --settings WEBSITE_WEBDEPLOY_USE_SCM=false NEW_VARIABLE=1
 
-      - name: Deploy to Azure Web App
-        run: |
-          az webapp up --runtime PYTHON:3.11 --sku B1 --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }} --location "${{ vars.LOCATION }}" --subscription ${{ vars.SUBSCRIPTION_TEST }}
-          az webapp config set --startup-file "python3 -m gunicorn app:app" --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }}
+      # - name: Deploy to Azure Web App
+      #   run: |
+      #     az webapp up --runtime PYTHON:3.11 --sku B1 --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }} --location "${{ vars.LOCATION }}" --subscription ${{ vars.SUBSCRIPTION_TEST }}
+      #     az webapp config set --startup-file "python3 -m gunicorn app:app" --name ${{ vars.WEBAPP_NAME_TEST }} --resource-group ${{ vars.RESOURCE_GROUP_TEST }}
 
 # name: CI/CD Pipeline
 
