--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -206,54 +206,55 @@ jobs:
               {
                 "name": "PROMPTFLOW_RESPONSE_FIELD_NAME",
                 "value": "answer"
-              },
-              {
-                "name": "AZURE_OPENAI_KEY",
-                "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
-              },
-              {
-                "name": "AZURE_OPENAI_RESOURCE",
-                "value": "${{ vars.AZURE_OPENAI_RESOURCE_TEST }}"
-              },
-              {
-                "name": "AZURE_OPENAI_MODEL",
-                "value": "${{ vars.AZURE_OPENAI_MODEL }}"
-              },
-              {
-                "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-                "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
-              },
-              {
-                "name": "AZURE_OPENAI_ENDPOINT",
-                "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
-              },
-              {
-                "name": "AZURE_OPENAI_EMBEDDING_NAME",
-                "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
-              },
-              {
-                "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
-                "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
-              },
-              {
-                "name": "AZURE_OPENAI_EMBEDDING_KEY",
-                "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
-              },
-              {
-                "name": "AZURE_SEARCH_SERVICE",
-                "value": "${{ vars.AZURE_SEARCH_SERVICE_TEST }}"
-              },
-              {
-                "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
-                "value": "https://${{ vars.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
-              },
-              {
-                "name": "AZURE_SEARCH_INDEX",
-                "value": "${{ vars.AZURE_SEARCH_INDEX }}"
-              },
-              {
-                "name": "AZURE_SEARCH_KEY",
-                "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
               }
+                #,
+              # {
+              #   "name": "AZURE_OPENAI_KEY",
+              #   "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_RESOURCE",
+              #   "value": "${{ vars.AZURE_OPENAI_RESOURCE_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_MODEL",
+              #   "value": "${{ vars.AZURE_OPENAI_MODEL }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+              #   "value": "${{ vars.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_ENDPOINT",
+              #   "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_EMBEDDING_NAME",
+              #   "value": "${{ vars.AZURE_OPENAI_EMBEDDING_NAME }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
+              #   "value": "${{ vars.AZURE_OPENAI_ENDPOINT_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_OPENAI_EMBEDDING_KEY",
+              #   "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_SEARCH_SERVICE",
+              #   "value": "${{ vars.AZURE_SEARCH_SERVICE_TEST }}"
+              # },
+              # {
+              #   "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
+              #   "value": "https://${{ vars.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
+              # },
+              # {
+              #   "name": "AZURE_SEARCH_INDEX",
+              #   "value": "${{ vars.AZURE_SEARCH_INDEX }}"
+              # },
+              # {
+              #   "name": "AZURE_SEARCH_KEY",
+              #   "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
+              # }
             ]
             
