--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -93,6 +93,7 @@ jobs:
               }            
               {
               "name": "AZURE_OPENAI_MODEL_NAME",
-              "value": "${{ vars.AZURE_OPENAI_MODEL }}"
+              "value": ${{ vars.AZURE_OPENAI_MODEL }}
+              
               }
             ]
