--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -90,10 +90,9 @@ jobs:
               {
                 "name": "AZURE_OPENAI_TOP_P",
                 "value": "${{ 0 }}"
-              }            
+              },            
               {
-              "name": "AZURE_OPENAI_MODEL_NAME",
-              "value": ${{ vars.AZURE_OPENAI_MODEL }}
-              
+                "name": "AZURE_SEARCH_KEY",
+                "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
               }
             ]
