--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -218,10 +218,10 @@ jobs:
               "name": "AZURE_OPENAI_MODEL",
               "value": "${{ env.AZURE_OPENAI_MODEL }}"
             },
-            {
-              "name": "AZURE_OPENAI_KEY",
-              "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
-            },
+            # {
+            #   "name": "AZURE_OPENAI_KEY",
+            #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
+            # },
             {
               "name": "AZURE_OPENAI_RESOURCE",
               "value": "${{ env.AZURE_OPENAI_RESOURCE_TEST }}"
@@ -242,10 +242,10 @@ jobs:
               "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
               "value": "${{ env.AZURE_OPENAI_ENDPOINT_TEST }}"
             },
-            {
-              "name": "AZURE_OPENAI_EMBEDDING_KEY",
-              "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
-            },
+            # {
+            #   "name": "AZURE_OPENAI_EMBEDDING_KEY",
+            #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
+            # },
             {
               "name": "AZURE_SEARCH_SERVICE",
               "value": "${{ env.AZURE_SEARCH_SERVICE_TEST }}"
@@ -258,8 +258,8 @@ jobs:
               "name": "AZURE_SEARCH_INDEX",
               "value": "${{ env.AZURE_SEARCH_INDEX }}"
             },
-            {
-              "name": "AZURE_SEARCH_KEY",
-              "value": "${{ env.AZURE_SEARCH_KEY_TEST }}"
-            }
+            # {
+            #   "name": "AZURE_SEARCH_KEY",
+            #   "value": "${{ env.AZURE_SEARCH_KEY_TEST }}"
+            # }
           ]'
