--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -218,10 +218,14 @@ jobs:
               "name": "AZURE_OPENAI_MODEL",
               "value": "${{ env.AZURE_OPENAI_MODEL }}"
             },
-            # {
-            #   "name": "AZURE_OPENAI_KEY",
-            #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
-            # },
+            {
+              "name": "AZURE_OPENAI_MODEL_NAME",
+              "value": "${{ env.AZURE_OPENAI_MODEL }}"
+            },
+            {
+              "name": "AZURE_OPENAI_KEY",
+              "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
+            },
             {
               "name": "AZURE_OPENAI_RESOURCE",
               "value": "${{ env.AZURE_OPENAI_RESOURCE_TEST }}"
@@ -229,37 +233,40 @@ jobs:
             {
               "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
               "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
-            },
-            {
-              "name": "AZURE_OPENAI_ENDPOINT",
-              "value": "${{ env.AZURE_OPENAI_ENDPOINT_TEST }}"
-            },
-            {
-              "name": "AZURE_OPENAI_EMBEDDING_NAME",
-              "value": "${{ env.AZURE_OPENAI_EMBEDDING_NAME }}"
-            },
-            {
-              "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
-              "value": "${{ env.AZURE_OPENAI_ENDPOINT_TEST }}"
-            },
-            # {
-            #   "name": "AZURE_OPENAI_EMBEDDING_KEY",
-            #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
-            # },
-            {
-              "name": "AZURE_SEARCH_SERVICE",
-              "value": "${{ env.AZURE_SEARCH_SERVICE_TEST }}"
-            },
-            {
-              "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
-              "value": "https://${{ env.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
-            },
-            {
-              "name": "AZURE_SEARCH_INDEX",
-              "value": "${{ env.AZURE_SEARCH_INDEX }}"
-            },
-            # {
-            #   "name": "AZURE_SEARCH_KEY",
-            #   "value": "${{ env.AZURE_SEARCH_KEY_TEST }}"
-            # }
+            }
           ]'
+      
+
+          # ,
+          # {
+          #   "name": "AZURE_OPENAI_ENDPOINT",
+          #   "value": "${{ env.AZURE_OPENAI_ENDPOINT_TEST }}"
+          # },
+          # {
+          #   "name": "AZURE_OPENAI_EMBEDDING_NAME",
+          #   "value": "${{ env.AZURE_OPENAI_EMBEDDING_NAME }}"
+          # },
+          # {
+          #   "name": "AZURE_OPENAI_EMBEDDING_ENDPOINT",
+          #   "value": "${{ env.AZURE_OPENAI_ENDPOINT_TEST }}"
+          # },
+          # {
+          #   "name": "AZURE_OPENAI_EMBEDDING_KEY",
+          #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
+          # },
+          # {
+          #   "name": "AZURE_SEARCH_SERVICE",
+          #   "value": "${{ env.AZURE_SEARCH_SERVICE_TEST }}"
+          # },
+          # {
+          #   "name": "AZURE_SEARCH_SERVICE_ENDPOINT",
+          #   "value": "https://${{ env.AZURE_SEARCH_SERVICE_TEST }}.search.windows.net"
+          # },
+          # {
+          #   "name": "AZURE_SEARCH_INDEX",
+          #   "value": "${{ env.AZURE_SEARCH_INDEX }}"
+          # },
+          # {
+          #   "name": "AZURE_SEARCH_KEY",
+          #   "value": "${{ env.AZURE_SEARCH_KEY_TEST }}"
+          # }
