--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -220,20 +220,17 @@ jobs:
               "name": "AZURE_OPENAI_MODEL_NAME",
               "value": "${{ env.AZURE_OPENAI_MODEL }}"
             },
-            {
-              "name": "AZURE_OPENAI_KEY",
-              "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
-            },
+
             {
               "name": "AZURE_OPENAI_RESOURCE",
               "value": "${{ env.AZURE_OPENAI_RESOURCE_TEST }}"
-            },
-            {
-              "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-              "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
             }
           ]'
       
+          # {
+          #   "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+          #   "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+          # }
 
           # ,
           # {
@@ -250,7 +247,7 @@ jobs:
           # },
           # {
           #   "name": "AZURE_OPENAI_EMBEDDING_KEY",
-          #   "value": "${{ env.AZURE_OPENAI_KEY_TEST }}"
+          #   "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
           # },
           # {
           #   "name": "AZURE_SEARCH_SERVICE",
@@ -262,9 +259,14 @@ jobs:
           # },
           # {
           #   "name": "AZURE_SEARCH_INDEX",
-          #   "value": "${{ env.AZURE_SEARCH_INDEX }}"
+          #   "value": "${{ secrets.AZURE_SEARCH_INDEX }}"
           # },
           # {
           #   "name": "AZURE_SEARCH_KEY",
-          #   "value": "${{ env.AZURE_SEARCH_KEY_TEST }}"
+          #   "value": "${{ secrets.AZURE_SEARCH_KEY_TEST }}"
+
+          # {
+          #   "name": "AZURE_OPENAI_KEY",
+          #   "value": "${{ secrets.AZURE_OPENAI_KEY_TEST }}"
+          # },
           # }
