--- a/.github/workflows/cicd-pipeline-new.yml
+++ b/.github/workflows/cicd-pipeline-new.yml
@@ -224,14 +224,18 @@ jobs:
             {
               "name": "AZURE_OPENAI_RESOURCE",
               "value": "${{ env.AZURE_OPENAI_RESOURCE_TEST }}"
+            },
+            {
+            "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+            "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
+            
+            },
+            {
+            "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
+            "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
             }
           ]'
-      
-          # {
-          #   "name": "AZURE_OPENAI_SYSTEM_MESSAGE",
-          #   "value": "${{ env.AZURE_OPENAI_SYSTEM_MESSAGE }}"
-          # }
-
+    
           # ,
           # {
           #   "name": "AZURE_OPENAI_ENDPOINT",
