--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-markdown": "^7.0.1",
     "react-multi-carousel": "^2.8.5",
     "react-plotly.js": "^2.6.0",
